--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ zajmuja 100% szerokosci rodzica, mozemy ustawic mu wysokosc i szerokosc,
 <!--    #formularz>form>(label+input)*2+(label+textarea)+input-->
   
    <div id="formularz">
-       <form action="">
+       <form action="https://formspree.io/halimonm@gmail.com" method="POST">
            <label for="name">Imie:</label><br>
            <input type="text" id="name" name="name"> <br>
            <label for="surname">Nazwisko</label> <br>
